[gd_scene load_steps=2 format=3 uid="uid://wldwskqvtxqh"]

[ext_resource type="Script" path="res://Scenes/dash.gd" id="1_psx7v"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_psx7v")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CoolDown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
